fixed error due bug in method loadTable, removed unused validators